k8s/buyer/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: buyer-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: buyer
  template:
    metadata:
      labels:
        app: buyer
    spec:
      containers:
        - initContainers:
            - name: run-migrations
              image: buyer-migrations:13
              command: [ "mvn", "flyway:migrate" ] # CLI команда запуску міграцій, де $(POSTGRESQL_URL) і $(VERSION) змінні середовища
        - image: buyer:latest
          imagePullPolicy: Never
          name: buyer
          ports:
            - containerPort: 3002
