k8s/buyer/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: buyer-service
spec:
  ports:
    - port: 8080
      targetPort: 3002
  selector:
    app: buyer
