k8s/buyer/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: buyer-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
    - http:
        paths:
          - path: /api/buyer
            pathType: "Prefix"
            backend:
              service:
                name: buyer-service
                port:
                  number: 8080
